# turbolite

./: .dockerignore  .gitignore  ADVERSARIAL_REVIEW.md  BENCHMARK.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  Dockerfile.lambda  Dockerfile.lambda-fast  Makefile  README.md  README_HN.md  ROADMAP.md  build.rs  cbindgen.toml  fly.toml  turbolite.h
.github/workflows/: ci.yml  release.yml
benchmark/: Dockerfile  README.md  bench-validate.rs  bench_graft.py  bench_s3sqlite.py  bench_s3vfs.py  entrypoint.sh  fly-008-default-on-full.toml  fly-008-default-on-noplan.toml  fly-008-default-on-small.toml  fly-100k.toml  fly-full.toml  fly-graft.toml  fly-s3sqlite.toml  fly-s3vfs.toml  fly-tune.toml  fly.toml  generate_social_db.py  lambda-bootstrap.sh  quick-bench.rs  run_graft_bench.sh  run_s3sqlite_bench.sh  run_s3vfs_bench.sh  tiered-bench-lambda.rs  tiered-bench.rs  tiered-tune.rs  tpch-bench.rs  turbolite-bench.rs  write-bench.rs
benchmark-results/008-default-on-matrix-20260612/: fly-noplan-off.start-ts.txt  fly-noplan-off.status.txt  fly-noplan-on.status.txt  fly-small-planaware-off-concise.status.txt  fly-small-planaware-off-live.live.start-ts.txt  fly-small-planaware-off-live.live.status.txt  fly-small-planaware-on-concise.status.txt  fly-small-planaware-on-live.live.start-ts.txt  fly-small-planaware-on-live.live.status.txt  fly-small-planaware-on.start-ts.txt
docs/experiments/: 009-remote-io-tail-experiments.md
examples/c/: README.md  basic.c  local.c  tiered.c
examples/go/: README.md  go.mod  local.go  main.go  tiered.go
examples/node/: README.md  basic.mjs  local.mjs  package-lock.json  package.json  tiered.mjs
examples/python/: README.md  basic.py  local.py  tiered.py
examples/rust/: Cargo.toml  README.md
examples/rust/src/: local.rs  main.rs  tiered.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: manifest_parse.rs  vfs_operations.rs
specs/: README.md  cursor_chain.qnt  cursor_chain_liveness.qnt  manifest_cas.qnt
src/: btree_walker.rs  compress.rs  dict.rs  ext.rs  ext_entry.c  ffi.rs  install_hook.rs  lib.rs  plugin_vfs.rs  tiered.rs
src/local/: file_format.rs  mod.rs
src/tiered/: bench.rs  btree_peek.rs  cache_tracking.rs  compact.rs  config.rs  disk_cache.rs  encoding.rs  flush.rs  handle.rs  http_client.rs  import.rs  interior_map.rs  keys.rs  leaf_chaser.rs  local_state.rs  lookahead.rs  manifest.rs  mod.rs  overflow.rs  prediction.rs  prefetch.rs  query_plan.rs  record_parser.rs  replay.rs  rotation.rs  s3_client.rs  sashimono.rs  schema.rs  settings.rs  snapshot_source.rs  sqlite_err.rs  staging.rs  storage.rs  storage_client.rs  test_cache_tracking.rs  test_config.rs  test_disk_cache.rs  test_encoding.rs  test_flush.rs  test_handle.rs  (+12 more)
tests/: CONTRACT_PROOFS.md  cli_integration.rs  cli_s3_test.rs  cli_test.rs  concurrent_test.rs  config_set_auto_install.rs  config_set_per_handle.rs  config_set_process_global_check.rs  crash_recovery.rs  crash_recovery_manifest.rs  differential_oracle.proptest-regressions  differential_oracle.rs  ffi_safety.rs  ffi_test.rs  flush_missing_pages.rs  integration.rs  multiprocess_test.rs  profile_refresh_test.rs  property_compression.proptest-regressions  property_compression.rs  property_encryption.rs  property_manifest.rs  property_page_groups.rs  property_prefetch.rs  rotation_crash.rs  set_len_btrees.rs  sync_mode_semantics.rs  test_cross_connection_refresh.rs  test_ffi_c.c  test_ffi_python.py  test_loadable_ext.py  test_refresh_profiling.rs  tiered.rs  tiered_test.rs
tests/fixtures/: sashimono_checkpoint_v1.json  sashimono_delta_v1.json  sashimono_root_v1.json
tests/test_ffi_go/: go.mod  main.go
tests/test_ffi_node/: package-lock.json  package.json  test.mjs
tests/tiered/: advanced.rs  basic.rs  borodino.rs  btree_grouping.rs  compact.rs  concurrent_eviction.rs  crash_flush.rs  data_ops.rs  drift.rs  encryption.rs  eviction.rs  gc.rs  helpers.rs  indexes.rs  jena.rs  manifest_persistence.rs  materialize.rs  oracle_s3.rs  prediction.rs  snapshot_gc.rs  staging.rs  wal_integration.rs  zenith.rs
turbolite-ffi/: .gitignore  Cargo.toml  Makefile  build.rs  cbindgen.toml  turbolite.h  turbolite.pc.in
turbolite-ffi/.cargo/: config.toml
turbolite-ffi/src/: ext.rs  ext_entry.c  ffi.rs  install.rs  lib.rs  settings.rs  trace.rs
turbolite-ffi/tests/: crash_recovery.rs  ffi_safety.rs  ffi_test.rs  install_config_functions.rs  p3_regression.rs  test_auto_extension_python.py  test_ffi_c.c  test_ffi_python.py  test_loadable_ext.py
turbolite-ffi/tests/test_ffi_go/: main.go
turbolite-ffi/tests/test_ffi_node/: test.mjs
