[package]
name = "turbolite"
version = "0.4.1"
edition = "2021"
description = "turbolite - SQLite VFS with sub-50ms cold queries from S3 + page-level compression and encryption"
license = "Apache-2.0"
repository = "https://github.com/russellromney/turbolite"
keywords = ["sqlite", "compression", "encryption", "vfs", "zstd"]
categories = ["database", "compression"]

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["zstd", "bundled-sqlite"]
bundled-sqlite = ["dep:rusqlite", "rusqlite/bundled", "dep:libsqlite3-sys"]
loadable-extension = []
zstd = ["dep:zstd"]
lz4 = ["dep:lz4_flex"]
snappy = ["dep:snap"]
gzip = ["dep:flate2"]
encryption = ["dep:aes-gcm", "dep:aes", "dep:ctr", "dep:sha2", "dep:rand"]
parallel = []
# Binaries in this package that want an S3-backed StorageBackend pull in
# hadb-storage-s3 through this feature. The library itself never depends
# on a concrete backend; it only knows hadb-storage (the trait).
cli-s3 = ["dep:hadb-storage-s3"]
# Benchmark binaries still reference the pre-Anvil-g API surface
# (storage_backend, s3_counters, destroy_s3). Gated separately so
# `cli-s3` alone doesn't pull them into `cargo build` / `cargo test`.
# Rewire is a follow-up.
bench-s3 = ["cli-s3"]
# WAL replication requires an S3 backend for walrust to ship segments to.
# When turning on `wal` the concrete S3 impl must be compiled in too.
wal = ["dep:walrust-core", "cli-s3"]
lambda = ["dep:lambda_runtime", "bench-s3", "zstd"]

[dependencies]
sqlite-vfs = { git = "https://github.com/russellromney/sqlite-vfs.git", branch = "fix/shm-barrier-wal-push" }
zstd = { version = "0.13", optional = true }
lz4_flex = { version = "0.11", optional = true }
snap = { version = "1.1", optional = true }
flate2 = { version = "1.0", optional = true }
thiserror = "1"
parking_lot = "0.12"
flume = "0.11"
arc-swap = "1"
fs2 = "0.4"
file-guard = "0.2"
once_cell = "1"

# Encryption (optional)
aes-gcm = { version = "0.10", optional = true }
aes = { version = "0.8", optional = true }
ctr = { version = "0.9", optional = true }
sha2 = { version = "0.10", optional = true }
rand = { version = "0.8", optional = true }

# Parallel compression (optional)
rayon = "1.10"

# Storage abstraction (trait only, concrete backends are picked by consumers).
hadb-storage = { path = "../hadb/hadb-storage", version = "0.4" }
# LocalStorage is the zero-dep backend used by TurboliteVfs::new. Conceptually a
# sibling of any other backend; it lives in hadb so other crates can share it.
hadb-storage-local = { path = "../hadb/hadb-storage-local", version = "0.4" }
async-trait = { version = "0.1" }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
libc = "0.2"

# Concrete storage backend for binaries that talk to S3 (CLI, benchmarks).
# Library code never references this crate.
hadb-storage-s3 = { path = "../hadb/hadb-storage-s3", version = "0.4", optional = true }

# CLI dependencies
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.35", features = ["backup"], optional = true }
libsqlite3-sys = { version = "0.33", features = ["bundled"], optional = true }
tempfile = "3"
ureq = "2"
rustyline = "15"
atty = "0.2"
lambda_runtime = { version = "0.13", optional = true }

# WAL replication via walrust (optional). Path-dep to the in-tree walrust-core
# crate — the published outer `walrust` (0.5.x) doesn't expose `SyncState` /
# `run_wal_replication` at the top level, only the inner core does.
walrust-core = { path = "../walrust/crates/walrust-core", version = "0.3", optional = true, package = "walrust" }

rmp-serde = "1.3.1"

[build-dependencies]
cbindgen = "0.27"
cc = "1"

[dev-dependencies]
rayon = "1.10"
rmp-serde = "1.3.1"
proptest = "1.5"
proptest-derive = "0.5"
arbitrary = { version = "1.3", features = ["derive"] }
# In-memory StorageBackend for tests; avoids the need for a real S3 or even a
# filesystem round-trip.
hadb-storage-mem = { path = "../hadb/hadb-storage-mem", version = "0.4" }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }

# Binary targets are all gated on cli-s3 during Phase Turbogenesis c3. They
# still reference the old StorageBackend enum / bucket-prefix config
# surface and are being rewired in c5.
[[bin]]
name = "turbolite"
path = "bin/turbolite.rs"
required-features = ["cli-s3"]

[[bin]]
name = "turbolite-bench"
path = "benchmark/turbolite-bench.rs"
required-features = ["bench-s3"]

[[bin]]
name = "tiered-bench"
path = "benchmark/tiered-bench.rs"
required-features = ["bench-s3"]

[[bin]]
name = "tpch-bench"
path = "benchmark/tpch-bench.rs"
required-features = ["bench-s3", "zstd"]

[[bin]]
name = "tiered-bench-lambda"
path = "benchmark/tiered-bench-lambda.rs"
required-features = ["lambda"]

[[bin]]
name = "write-bench"
path = "benchmark/write-bench.rs"
required-features = ["bench-s3", "zstd"]

[[bin]]
name = "bench-validate"
path = "benchmark/bench-validate.rs"
required-features = ["bench-s3", "zstd"]

[[bin]]
name = "tiered-tune"
path = "benchmark/tiered-tune.rs"
required-features = ["bench-s3"]

[[example]]
name = "quick-bench"
path = "benchmark/quick-bench.rs"
required-features = ["encryption"]
